--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,6 @@ out/
 .vscode/
 
 ### .gitignore ###
-/src/main/resources
+/src/main/resources/application.properties/
+/src/main/resources/application.yml/
 
