--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,5 @@ out/
 .vscode/
 
 ### .gitignore ###
-/src/main/resources/application.properties/
-/src/main/resources/application.yml/
+/src/main/resources/
 
