--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ repositories {
 }
 
 dependencies {
+//    Marvin Library 의존성 추가(marvin 라이브러리를 사용하기 위해 build.gradle에 아래의 내용을 추가)
+    implementation 'com.github.downgoon:marvin:1.5.5'
+    implementation 'com.github.downgoon:MarvinPlugins:1.5.5'
+    implementation 'org.springframework:spring-test'
+
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
