--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,8 @@ out/
 .vscode/
 
 ### .gitignore ###
-/src/main/resources/
+/src/main/resources/application.yml/
+/src/main/resources/application.properties/
 
 ###
 /dump.rdb/
