--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 HELP.md
+dump.rdb
+
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -37,8 +39,6 @@ out/
 .vscode/
 
 ### .gitignore ###
-/src/main/resources/application.yml/
-/src/main/resources/application.properties/
+/src/main/resources
 
-###
-/dump.rdb/
+
