--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,67 +1,50 @@
 name: CD with Gradle
-
 # 언제 이 파일의 내용이 실행될 것인지 정의
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "dev" ]
   pull_request:
-    branches: [ "main" ]
-    
+    branches: [ "dev" ]
 # 코드의 내용을 이 파일을 실행하여 action을 수행하는 주체(Github Actions에서 사용하는 VM)가 읽을 수 있도록 허용
 permissions:
   contents: read
-
+env:
+  PROJECT_NAME: cubeninggen
+  BUCKET_NAME: elasticbeanstalk-ap-northeast-2-372506499617
+  CODE_DEPLOY_APP_NAME: cicd
+  DEPLOYMENT_GROUP_NAME: cicd
 # 실제 실행될 내용들을 정의
 jobs:
   build:
     runs-on: ubuntu-latest  # ubuntu 최신 버전에서 script를 실행
-
     steps:
-    # 지정한 저장소(현재 REPO)에서 코드를 워크플로우 환경으로 가져오도록 하는 github action
-    - uses: actions/checkout@v3
-    
-    # open jdk 17 버전 환경을 세팅
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        
-    # Github secrets로부터 데이터를 받아서, 워크 플로우에 파일을 생성
-    - name: Make application.yml
-      run: |
-         cd ./src/main/resources
-         touch ./application-KEY.yml
-         echo "${{ secrets.YAML }}" > ./application-KEY.yml
-      shell: bash
-      
-    # gradle을 통해 소스를 빌드
-    - name: Build with Gradle
-      run: |
+      # 지정한 저장소(현재 REPO)에서 코드를 워크플로우 환경으로 가져오도록 하는 github action
+      - uses: actions/checkout@v3
+      # open jdk 17 버전 환경을 세팅
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      # gradle을 통해 소스를 빌드
+      - name: Build with Gradle
+        run: |
           chmod +x ./gradlew
           ./gradlew clean build -x test
-  
-    # dockerfile을 통해 이미지를 빌드하고, 이를 docker repo로 push
-    - name: Docker build & push to docker repo
-      run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} .
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
-
-    # appleboy/ssh-action@master 액션을 사용하여 지정한 서버에 ssh로 접속하고, script를 실행
-    # script의 내용은 도커의 기존 프로세스들을 제거하고, docker repo로부터 방금 위에서 push한 내용을 pull 받아 실행하는 것
-    # 실행 시, docker-compose를 사용
-    - name: Deploy to server
-      uses: appleboy/ssh-action@master
-      id: deploy
-      with:
-        host: ${{ secrets.HOST }}
-        username: ubuntu
-        key: ${{ secrets.KEY }}
-        envs: GITHUB_SHA
-        script: | 
-          sudo docker rm -f $(docker ps -qa)
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
-          docker-compose up -d
-          docker image prune -f
-          docker run -d -p 80:8080 ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
+      - name: Make Zip File
+        run: zip -qq -r ./$GITHUB_SHA.zip .
+        shell: bash
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_PRIVATE_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+      - name: Upload to S3
+        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
+      - name: Code Deploy To EC2 instance
+        run: aws deploy create-deployment
+          --application-name $CODE_DEPLOY_APP_NAME
+          --deployment-config-name CodeDeployDefault.AllAtOnce
+          --deployment-group-name $DEPLOYMENT_GROUP_NAME
+          --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$GITHUB_SHA.zip
