--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,7 @@ env:
   PROJECT_NAME: cubeninggen
   BUCKET_NAME: cicd-s3-1
   CODE_DEPLOY_APP_NAME: cicd
-  DEPLOYMENT_GROUP_NAME: cicd
+  DEPLOYMENT_GROUP_NAME: codedploy-deployment-group
 # 실제 실행될 내용들을 정의
 jobs:
   build:
