--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,7 @@ env:
   PROJECT_NAME: cubeninggen
   BUCKET_NAME: cicd-s3-1
   CODE_DEPLOY_APP_NAME: cicd
-  DEPLOYMENT_GROUP_NAME: cicd
+  DEPLOYMENT_GROUP_NAME: codedploy-deployment-group
 # 실제 실행될 내용들을 정의
 jobs:
   build:
@@ -42,7 +42,7 @@ jobs:
         run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
       - name: Code Deploy To EC2 instance
         run: aws deploy create-deployment
-          --application-name $CODE_DEPLOY_APP_NAME
+          --application-name ${{ env.CODE_DEPLOY_APP_NAME }} 
           --deployment-config-name CodeDeployDefault.AllAtOnce
-          --deployment-group-name $DEPLOYMENT_GROUP_NAME
+          --deployment-group-name ${{ env.DEPLOYMENT_GROUP_NAME }}
           --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$GITHUB_SHA.zip
