--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "dev" ]
 # 코드의 내용을 이 파일을 실행하여 action을 수행하는주체(Github Actions에서 사용하는 VM)가 읽을 수 있도록 허용
 env:
-  PROJECT_NAME: cubeninggen
+  PROJECT_NAME: BE
   BUCKET_NAME: cicd-sobun-bucket
   CODE_DEPLOY_APP_NAME: cicd
   DEPLOYMENT_GROUP_NAME: cicd-module
@@ -17,13 +17,13 @@ jobs:
     runs-on: ubuntu-latest  # ubuntu 최신 버전에서 script를 실행
     steps:
       # 지정한 저장소(현재 REPO)에서 코드를 워크플로우 환경으로 가져오도록 하는 github action
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       # open jdk 17 버전 환경을 세팅
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v1
         with:
           java-version: '17'
-          distribution: 'temurin'
+          #distribution: 'temurin'
       # gradle을 통해 소스를 빌드
       - name: Build with Gradle
         run: |
