--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,7 +12,6 @@ env:
   BUCKET_NAME: cicd-sobun-bucket
   CODE_DEPLOY_APP_NAME: cicd
   DEPLOYMENT_GROUP_NAME: cicd-module
-  GITHUB_SHA: ${{ github.sha }}
 # 실제 실행될 내용들을 정의
 jobs:
   build:
@@ -32,7 +31,7 @@ jobs:
           chmod +x ./gradlew
           ./gradlew clean build -x test
       - name: Make Zip File
-        run: zip -qq -r ./$"GITHUB_SHA".zip .
+        run: zip -qq -r ./$GITHUB_SHA.zip .
         shell: bash
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
