--- a/src/appspec.yml
+++ b/src/appspec.yml
@@ -5,6 +5,7 @@ files:
   - source: /
     destination: /home/ubuntu/BE
     overwrite: yes
+    file_exists_behavior: OVERWRITE
 permissions:
   - object: /
     pattern: "**"
