--- a/appspec.yml
+++ b/appspec.yml
@@ -1,17 +1,20 @@
 version: 0.0
 os: linux
-
 files:
-  - source: /
+  - source:  /
     destination: /home/ubuntu/zzoget
     overwrite: yes
 permissions:
-  - object: /home/ubuntu/zzoget/
+  - object: /
     pattern: "**"
     owner: ubuntu
     group: ubuntu
 hooks:
   AfterInstall:
-    - location: scripts/deploy.sh
+    - location: scripts/stop.sh
+      timeout: 60
+      runas: ubuntu
+  ApplicationStart:
+    - location: scripts/start.sh
       timeout: 60
       runas: ubuntu
