--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,53 +1,57 @@
-name: Build and Deploy Spring Boot to AWS EC2
-
+name: Deploy to Amazon EC2
 on:
-  pull_request:
-    branches: [ "dev" ]
-
-# --------------------------추가
+  push:
+    branches:
+      - dev
+# 본인이 설정한 값을 여기서 채워넣습니다.
+# 리전, 버킷 이름, CodeDeploy 앱 이름, CodeDeploy 배포 그룹 이름
 env:
-  PROJECT_NAME: ZZOGET
-  BUCKET_NAME: cicdcicd-bucket
-  CODE_DEPLOY_APP_NAME: cicdcicd
-  DEPLOYMENT_GROUP_NAME: cicdcicd
-# --------------------------추가
-
+  AWS_REGION: ap-northeast-2
+  S3_BUCKET_NAME: cicdcicd-bucket
+  CODE_DEPLOY_APPLICATION_NAME: cicdcicd
+  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: cicdcicd
+permissions:
+  contents: read
 jobs:
   deploy:
+    name: Deploy
     runs-on: ubuntu-latest
+    environment: production
     steps:
-      - uses: actions/checkout@v2
-
+      # (1) 기본 체크아웃
+      - name: Checkout
+        uses: actions/checkout@v3
+      # (2) JDK 17 세팅
       - name: Set up JDK 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
-          java-version: 17
-
-      - name: Permission for gradlew
-        run: chmod +x ./gradlew
-        shell: bash
-
-      - name: Build and Test
-        run: ./gradlew build test
-
-      # --------------------------추가
-      - name: Make Zip File
-        run: zip -qq -r ./$GITHUB_SHA.zip .
-        shell: bash
-
+          distribution: 'temurin'
+          java-version: '17'
+      # (3) Gradle build (Test 제외)
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        with:
+          arguments: clean build -x test
+      # (4) AWS 인증 (IAM 사용자 Access Key, Secret Key 활용)
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_PRIVATE_ACCESS_KEY }}
-          aws-region: ap-northeast-2
-
-      - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
-
-      - name: Code Deploy To EC2 instance
-        run: aws deploy create-deployment
-          --application-name $CODE_DEPLOY_APP_NAME
-          --deployment-config-name CodeDeployDefault.AllAtOnce
-          --deployment-group-name $DEPLOYMENT_GROUP_NAME
-          --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$GITHUB_SHA.zip
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY}}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+      # (5) 빌드 결과물을 S3 버킷에 업로드
+      - name: Upload to AWS S3
+        run: |
+          aws deploy push \
+            --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
+            --ignore-hidden-files \
+            --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
+            --source .
+      # (6) S3 버킷에 있는 파일을 대상으로 CodeDeploy 실행
+      - name: Deploy to AWS EC2 from S3
+        run: |
+          aws deploy create-deployment \
+            --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
+            --deployment-config-name CodeDeployDefault.AllAtOnce \
+            --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
+            --s3-location bucket=$S3_BUCKET_NAME,key=$GITHUB_SHA.zip,bundleType=zip
