--- a/appspec.yml
+++ b/appspec.yml
@@ -1,9 +1,11 @@
 version: 0.0
 os: linux
+
 files:
   - source:  /
     destination: /home/ubuntu/app
     overwrite: yes
+file_exists_behavior: OVERWRITE
 permissions:
   - object: /
     pattern: "**"
