--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,9 @@ name: Java CI with Gradle
 on:
   pull_request:
     branches: [ "dev" ]
+
+
+
 permissions:
   contents: read
 jobs:
@@ -14,6 +17,16 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+
+      #application.properties 만들기
+      - uses: actions/checkout@v2
+      - run: touch ./src/main/resources/application.properties
+      - run: echo "${{secrets.APPLICATION}}" > ./src/main/resources/application.properties
+      - uses: actions/upload-artifact@v2
+        with:
+          name: application.properties
+          path: ./src/main/resources/application.properties
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Test with Gradle # test application build
@@ -22,4 +35,3 @@ jobs:
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: build
-
