--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -92,10 +92,10 @@ jobs:
       #배포를 위한 prod properties 설정
       - name: Make application-prod.properties
         run: |
-          cd ./src/main/resources
-          touch ./application-prod.properties
-          echo "${{ secrets.PROPERTIES_PROD }}" > ./application-prod.properties
+          mkdir -p ./src/main/resources
+          echo "${{ secrets.PROPERTIES_PROD }}" > ./src/main/resources/application-prod.properties
         shell: bash
+
 
       #test를 제외한 프로젝트 빌드
       - name: Build With Gradle
