--- a/build.gradle
+++ b/build.gradle
@@ -100,7 +100,6 @@ dependencies {
 
     implementation 'mysql:mysql-connector-java:8.0.28'
 
-    runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
@@ -110,6 +109,8 @@ dependencies {
 
     // send mail
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+    implementation("com.github.maricn:logback-slack-appender:1.6.1")
 }
 
 tasks.named('test') {
