--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,10 @@ jobs:
           name: application.properties
           path: ./src/main/resources/application.properties
 
+      - name: Access aes.secret.key
+        run: |
+          echo "aes.secret.key : ${{ secrets.AES_SECRET_KEY }}"
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Test with Gradle # test application build
