--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,31 +19,24 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      #application.properties 만들기
+      - uses: actions/checkout@v2
+      - run: touch ./src/main/resources/application.properties
+      - run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.properties
+      - uses: actions/upload-artifact@v2
+        with:
+          name: application.properties
+          path: ./src/main/resources/application.properties
+
+      - name: Access aes.secret.key
+        run: |
+          echo "aes.secret.key : ${{ secrets.AES_SECRET_KEY }}"
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-
       - name: Test with Gradle # test application build
         run: ./gradlew --info test
       - name: Build with Gradle
-        run: ./gradlew clean build
-      # 디렉토리 생성
-      - name: Make Directory
-        run: mkdir -p deploy
-
-      # Jar 파일 복사
-      - name: Copy Jar
-        run: cp ./build/libs/*.jar ./deploy
-
-      - name: Make zip file
-        run: zip -r ./coinTalk.zip ./deploy
-        shell: bash
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-northeast-2
-
-      - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./coinTalk.zip s3://$S3_BUCKET_NAME/
+          arguments: build
